# aceachievers-mcp-server

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
clients/ts/: .eslintrc.json  README.md  demo.ts  package-lock.json  package.json  tsconfig.json
clients/ts/examples/: catalog-report.ts
clients/ts/src/: client.ts  index.ts  types.ts
clients/ts/test/: integration.test.ts  unit.test.ts
scripts/: demo_client.py
src/aceachievers_mcp/: private_bank.py  server.py
src/aceachievers_mcp/data/: courses.json  sample_questions.json
tests/: test_tools.py
