[project]
name = "aceachievers-mcp"
version = "1.0.0"
description = "MCP server exposing the Ace Achievers course catalog and question-bank tools to LLM agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Connie Liang", email = "connieliang043@gmail.com" }]
keywords = ["mcp", "model-context-protocol", "education", "llm", "agents"]
dependencies = ["mcp>=1.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
aceachievers-mcp = "aceachievers_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aceachievers_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
